// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExpenseForm create mode matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="overlay"
  >
    <div
      class="modal"
    >
      <div
        class="header"
      >
        <h2>
          expenses.form.title
        </h2>
        <button
          aria-label="Fermer"
          class="closeBtn"
        >
          ✕
        </button>
      </div>
      <div
        class="body"
      >
        <form>
          <div
            class="formGroup"
          >
            <label>
              expenses.form.supplier
            </label>
            <input
              placeholder="expenses.form.supplierPlaceholder"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="formGroup"
          >
            <label>
              common.date
            </label>
            <input
              type="date"
              value="2026-03-30"
            />
          </div>
          <div
            class="formRow"
          >
            <div
              class="formGroup"
            >
              <label>
                common.amounts.subtotal
              </label>
              <input
                min="0"
                placeholder="0.00"
                required=""
                step="0.01"
                type="number"
                value=""
              />
            </div>
            <div
              class="formGroup"
            >
              <label>
                common.amounts.vatRate
              </label>
              <input
                max="100"
                min="0"
                step="0.1"
                type="number"
                value="20"
              />
            </div>
          </div>
          <div
            class="formRow"
          >
            <div
              class="formGroup"
            >
              <label>
                common.amounts.vat
              </label>
              <div
                class="computed"
              >
                0.00 €
              </div>
            </div>
            <div
              class="formGroup"
            >
              <label>
                common.amounts.total
              </label>
              <div
                class="computed"
              >
                0.00 €
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <label>
              common.notes
            </label>
            <textarea
              placeholder="common.notesPlaceholder"
            />
          </div>
        </form>
      </div>
      <div
        class="footer"
      >
        <button
          class="btn secondary  "
        >
          common.cancel
        </button>
        <button
          class="btn primary  "
        >
          common.create
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExpenseForm edit mode matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="overlay"
  >
    <div
      class="modal"
    >
      <div
        class="header"
      >
        <h2>
          expenses.form.editTitle
        </h2>
        <button
          aria-label="Fermer"
          class="closeBtn"
        >
          ✕
        </button>
      </div>
      <div
        class="body"
      >
        <form>
          <div
            class="formGroup"
          >
            <label>
              expenses.form.supplier
            </label>
            <input
              placeholder="expenses.form.supplierPlaceholder"
              required=""
              type="text"
              value="Fournisseur SA"
            />
          </div>
          <div
            class="formGroup"
          >
            <label>
              common.date
            </label>
            <input
              type="date"
              value="2026-03-30"
            />
          </div>
          <div
            class="formRow"
          >
            <div
              class="formGroup"
            >
              <label>
                common.amounts.subtotal
              </label>
              <input
                min="0"
                placeholder="0.00"
                required=""
                step="0.01"
                type="number"
                value="500"
              />
            </div>
            <div
              class="formGroup"
            >
              <label>
                common.amounts.vatRate
              </label>
              <input
                max="100"
                min="0"
                step="0.1"
                type="number"
                value="20"
              />
            </div>
          </div>
          <div
            class="formRow"
          >
            <div
              class="formGroup"
            >
              <label>
                common.amounts.vat
              </label>
              <div
                class="computed"
              >
                100.00 €
              </div>
            </div>
            <div
              class="formGroup"
            >
              <label>
                common.amounts.total
              </label>
              <div
                class="computed"
              >
                600.00 €
              </div>
            </div>
          </div>
          <div
            class="formGroup"
          >
            <label>
              common.notes
            </label>
            <textarea
              placeholder="common.notesPlaceholder"
            >
              Achat matériel
            </textarea>
          </div>
        </form>
      </div>
      <div
        class="footer"
      >
        <button
          class="btn secondary  "
        >
          common.cancel
        </button>
        <button
          class="btn primary  "
        >
          common.edit
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
